--- a/homepage.html
+++ b/homepage.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://unpkg.com/flickity@2.2.0/dist/flickity.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&family=Platypi:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body data-barba="wrapper" data-navigation-status="not-active" data-scrolling-started="false"
@@ -528,7 +528,8 @@
                                     align-items: center;
                                     justify-content: center;
                                     text-align: center;
-                                    font-family: "Platypi"; 
+                                    font-family: "Merriweather"; 
+                                    text-shadow: 2px 2px 5px black;
                                 }
                             </style>
                             <div class="solid-skip-cursor-row">
@@ -564,14 +565,6 @@
                             <span data-split-text="false" class="eyebrow">About</span>
                             <p data-split-text="false" class="home-header-about-text">In today's tech-driven world, mastering technology is crucial. We propose the Axios Technical Club to foster innovation and skill development. This club will enhance students' technical abilities, promote collaboration, and prepare them for industry challenges.</p>
                         </div>
-                        <script>
-                            gsap.from(".home-header-about-text-container span, .home-header-about-text-container p", {
-                                opacity: 0,
-                                duration: 5, 
-                                delay: 1,
-                                ease: "power1.inOut"
-                            });
-                        </script>
                         <style>
                             .home-header-about-text-container {
                                 font-size: 2.5rem;
@@ -579,7 +572,6 @@
                             .home-header-about-text {
                                 font-size: 2rem;
                                 line-height: 1.3;
-                                font-family: Verdana, Geneva, Tahoma, sans-serif;
                             }
                         </style>
                     </div>
@@ -593,8 +585,8 @@
                                 <style>
                                     .section-how-panel{
                                         width: 100vw;
-                                        background-color: rgba(255, 255, 255, 0.452);
-                                        color: black;
+                                        background: linear-gradient(135deg, rgba(202, 201, 201, 0.6), rgba(0, 0, 0, 0.2));
+                                        color: whitesmoke;
                                         backdrop-filter: blur(5px);
                                     }
                                 </style>
@@ -612,6 +604,10 @@
                                                 font-weight: bold;
                                                 font-size: 1.4rem;
                                                 padding-right: 15%;
+                                                cursor: pointer;
+                                            }
+                                            .panel-content-row-description-text ul li:hover{
+                                                color: rgb(187, 188, 189);
                                             }
                                         </style>
                                         <div class="panel-content-row-title-title">
